--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="col lg-4 md-12">
         <div class="c-service_card">
           <div class="c-service__icon"><img src="write.png" width="64" alt=""></div>
-          <h3 class="margin-bottom">1. reflective writing</h3>
+          <h3 class="margin-bottom">1. Reflective writing</h3>
             </div>
       </div>
       <div class="col lg-4 md-12 slide-down">
